--- a/app/src/main/res/layout/activity_create_log_entry.xml
+++ b/app/src/main/res/layout/activity_create_log_entry.xml
@@ -114,7 +114,7 @@
 
             <TextView
                 android:id="@+id/leftWorkoutNameTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="WORKOUT NAME"
                 android:textColor="#000000"
