--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -112,7 +112,7 @@
                     android:padding="16dp">
 
                     <Button
-                        android:id="@+id/diaryButton"
+                        android:id="@+id/logButton"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:layout_marginTop="12dp"
