--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -24,6 +24,7 @@
                 android:layout_height="35dp"
                 android:layout_marginTop="4dp"
                 android:autoSizeTextType="uniform"
+                android:textColor="#000000"
                 android:text="@string/name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0"
@@ -83,7 +84,7 @@
                 android:layout_width="62dp"
                 android:layout_height="62dp"
                 android:layout_alignParentRight="true"
-                android:src="@drawable/ic_launcher_background" />
+                android:src="@drawable/icons_android_studio" />
 
         </RelativeLayout>
 
