--- a/app/src/main/res/layout/activity_log_proof.xml
+++ b/app/src/main/res/layout/activity_log_proof.xml
@@ -154,32 +154,21 @@
         </LinearLayout>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/doneButton"
-        android:layout_width="103dp"
-        android:layout_height="46dp"
-        android:layout_marginEnd="36dp"
-        android:text="DONE"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.977"
-        app:layout_constraintStart_toEndOf="@+id/dateTextView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.039" />
-
     <TextView
-        android:id="@+id/dateTextView"
+        android:id="@+id/heading_txtV"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:gravity="center"
+        android:layout_height="48dp"
         android:text="TextView"
         android:textColor="#000000"
         android:textSize="30dp"
-        android:visibility="invisible"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.028" />
 
     <Button
         android:id="@+id/submitValuesButton"
