--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -143,10 +143,11 @@
                     android:padding="16dp">
 
                     <Button
+                        android:id="@+id/btnShare"
                         android:layout_width="wrap_content"
                         android:layout_height="80dp"
                         android:layout_marginTop="12dp"
-                        android:text="Empty"
+                        android:text="Share"
                         android:textColor="#000000">
 
                     </Button>
