--- a/app/src/main/res/layout/activity_facebook.xml
+++ b/app/src/main/res/layout/activity_facebook.xml
@@ -31,6 +31,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         </Button>
-
+        <Button
+            android:onClick="take"
+            android:id="@+id/btnTakePhoto"
+            android:text="Take Photo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </Button>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <ImageView
+            android:layout_gravity="center"
+            android:id="@+id/ImageView"
+            android:layout_width="200dp"
+            android:layout_height="200dp">
+        </ImageView>
     </LinearLayout>
 </RelativeLayout>
